Fix search button alignment
Why is this change necessary?

* The button on the header form is slightly mis-aligned.

How does it address the issue?

* Sets the .btn font size to 14px in order to resolve the alignment
  issue.

--- a/govintranet/style.css
+++ b/govintranet/style.css
@@ -309,7 +309,7 @@ a.btn.filter_results { width: 100%; text-decoration: none; overflow:hidden; }
 	font-size: 16px;
 }
 #searchformdiv .btn {
-	font-size: 16px;
+	font-size: 14px;
 	border-radius: 0 3px 3px 0;
 }
 #sbc-search label {
